# py-projects2

CMS workflow manager/: .gitignore  CHECKPOINT_INFO.md  DEPLOYMENT_CHECKLIST.md  PROGRAM_FLOW_EXPLANATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  SHARING_QUICK_REF.md  START_HERE.md  WHY_API_PREFIX.md  WHY_UTILS_EXPLANATION.md  apis.py  app.py  config.py  pyproject.toml  requirements.txt  restore_checkpoint.ps1  run.bat  run.sh  utils.py
CMS workflow manager/checkpoints/: LATEST_CHECKPOINT.txt  README.md
CMS workflow manager/checkpoints/checkpoint_20251224_161008/: apis.py  app.py  utils.py
CMS workflow manager/info/: API_DOCUMENTATION.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  PROGRAM_FLOW_EXPLANATION.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  THEME_MIGRATION_FLOW.md  WHY_UTILS_EXPLANATION.md
CMS workflow manager/osb menu - faq migration/: api_response_final copy.json  apis.py  app copy 2.py  app copy.py  app.py  helper.py
CMS workflow manager/osb menu - faq migration/input/: settings.json
CMS workflow manager/osb menu - faq migration/templates/: base.html  faq.html  move_menu.html  settings.html
CMS workflow manager/output/: .gitkeep
CMS workflow manager/processing_steps/: __init__.py  brand_theme.py  content_plugin.py  faq_manager.py  finalize.py  html_menu.py  modules_features.py  secondary_language_menu.py  secondary_language_update.py  site_setup.py
CMS workflow manager/resource/: color_mapper.json  font_mapper.json  menu_field_mapper.json  menu_payload_template.json  postman_create_menu_record_with_description_payload.json  postman_create_signature_record_payload.json
CMS workflow manager/templates/: base.html  home.html  index.html  jobs_list.html
CMS workflow manager/uploads/: .gitkeep
CMS-AI-agent/: app.py  pyproject.toml
CMS-AI-agent/helper_functions/: README.md  __init__.py  login_token.py  vcomponent_page.py
CMS-AI-agent/output/training/: download_progress.json  download_summary.json  last_sites.json  login_token.json
CMS-AI-agent/process/: README.md  __init__.py  process_01_download_cms_data.py
CMS-AI-agent/rProject/: CHANGELOG.md  GETTING_STARTED.md  INDEX.md  NAVIGATION.md  PROJECT_SUMMARY.md  QUICK_START_30MIN.md  README.md
CMS-AI-agent/rProject/docs/: 01_CORE_CONCEPTS.md  02_HTML_ANALYSIS_LOGIC.md  03_FIELD_DEFINITION_GUIDE.md  04_HANDLEBARS_TEMPLATES.md  05_BEST_PRACTICES.md  06_VISUAL_WORKFLOWS.md  07_IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md
CMS-AI-agent/rProject/examples/: compound_component.html  simple_component.html  simple_component.json
CMS-AI-agent/rProject/schemas/: field_definition.schema.json
CMS-AI-agent/templates/: base.html  index.html  training.html
IND-Quant-Alpha/ind_quant/: README.md  app.py  pyproject.toml
IND-Quant-Alpha/ind_quant/engine/: __init__.py  config_store.py  data_fetcher.py  sentiment_engine.py  session_manager.py  strategy.py
IND-Quant-Alpha/ind_quant/templates/: dashboard.html  login.html  settings.html
IND-Quant-Alpha/kite_quant/: .env.example  .gitignore  AGGRESSIVE_TRADING_UPDATE.md  AI_BALANCE_FIX.md  AI_USAGE_EXPLAINED.md  ALGO_STATUS.md  ALGO_TEST_RESULTS.md  CANDLESTICK_PATTERNS_ANALYSIS.md  CRITICAL_FIXES_2026-02-10.md  CRITICAL_FIXES_FEB_2026.md  DAILY_CAPITAL_RESET_FIX.md  DYNAMIC_FREQUENCY_IMPLEMENTATION.md  EXTREME_VOLUME_MODE.md  FINAL_BALANCED_FIX.md  IMPLEMENTATION_SUMMARY.md  ONE_BRAIN_ARCHITECTURE.md  POSITION_DETAILS_AND_SEARCH_FIX.md  POSITION_SIZING_FIX.md  README.md  SETTINGS_PROPERLY_CONFIGURED.md  TEST_RESULTS.md  TRADING_REALITY_CHECK.md  UNIFIED_CODE_COMPLETE.md  VIEW_LOGS_FEATURE.md  WHY_ZERO_AI_SWITCHES.md  ZERODHA_PREDICTION_ACCURACY.md  app.py  generate_ai_governance_prompt.py  generate_token.bat  generate_token.py  nse_holidays.json  predictions.json  pyproject.toml  requirements.txt  run_server.py  test_1week.py  test_algos.py  test_fo_backtest.py  test_full_system.py  test_paper_trade_playwright.py  (+5 more)
IND-Quant-Alpha/kite_quant/backtest/: __init__.py  backtest_data_provider.py  backtest_engine.py
IND-Quant-Alpha/kite_quant/config/: algos.json  enrich_algos.py  strategy_groups.json
IND-Quant-Alpha/kite_quant/data/: live_broker_orders_history.json  trade_history.json  trade_sessions.json  trade_sessions_history.json
IND-Quant-Alpha/kite_quant/engine/: __init__.py  ai_strategy_advisor.py  algo_engine.py  backtest.py  (+18 more)
QA-Studio-V1.0 - Copy/backend/: .gitignore  README.md  pyproject.toml
QA-Studio-V1.0/backend/: README.md  pyproject.toml  run.py
(+1728 files in other folders)
