[tool.poetry]
name = "cms-workflow-manager"
version = "0.1.0"
description = "CMS workflow manager application"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.1.2"
Werkzeug = "3.1.4"
Jinja2 = "3.1.6"
MarkupSafe = "3.0.3"
itsdangerous = "2.2.0"
click = "8.3.1"
blinker = "1.9.0"
openpyxl = "3.1.2"
requests = "2.31.0"
gunicorn = "23.0.0"
pytest = "8.3.0"
pytest-flask = "1.3.0"

[tool.poetry.group.dev.dependencies]
# Add dev-only tools here if needed, e.g. black, ruff

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
