[tool.poetry]
name = "cms-ai-agent"
version = "0.1.0"
description = "CMS AI Agent - Download and process CMS data for training"
authors = ["Ramesh <ramesh.d@milestoneinternet.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.0.0"
requests = "^2.28.0"
playwright = "^1.40.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
